@@ -1,5 +1,13 @@
 2015-08-05  Kaz Kylheku  <kaz@kylheku.com>
 
+	Better diagnostic in funcall family of functions.
+
+	* lib.c (wrongargs): New static function.
+	(funcall, funcall2, funcall2, funcall3, funcall4):
+	Use wrongargs.
+
+2015-08-05  Kaz Kylheku  <kaz@kylheku.com>
+
 	* eval.c (do_eval): Bugfix: though last_form_evaled is
 	saved and restored around the execution of a special operator,
 	it is never set the current form.
